fix(custom): fix z-index

--- a/src/sections/section-catalog/section-catalog.scss
+++ b/src/sections/section-catalog/section-catalog.scss
@@ -562,6 +562,8 @@
 				border-bottom: solid 1px var(--smoke-white-second);
 
 				&__tags-wrapper {
+					position: relative;
+
 					display: flex;
 					flex-wrap: wrap;
 
@@ -572,6 +574,7 @@
 
 				&__img-bg {
 					position: absolute;
+					z-index: 0;
 					top: 0;
 					right: 0;
 				}
@@ -597,6 +600,8 @@
 				color: var(--wet-asphalt);
 
 				&__footer-wrapper {
+					position: relative;
+
 					display: flex;
 
 					padding: 43px 42px 70px 42px;
